Corrections after #haum proofreading

--- a/pres_edu_16112015/pres_edu_16112015.tex
+++ b/pres_edu_16112015/pres_edu_16112015.tex
@@ -56,7 +56,7 @@
 
 	\section{Qu'est ce qu'un fablab ?}
 	\begin{frame}
-		\frametitle{Fabalb : Définition}
+		\frametitle{Fablab : Définition}
 		\begin{quotation}
 			Un fab lab (contraction de l'anglais fabrication laboratory, « laboratoire de fabrication ») est un lieu ouvert au
 			public où il est mis à sa disposition toutes sortes d'outils, notamment des machines-outils pilotées par
@@ -127,9 +127,10 @@
 		\frametitle{Atouts pour les entreprises}
 
 		\begin{itemize}
-			\item Accès ponctuel à des outils exceptionnels pour \alert{prototyper}
 			\item \alert{Réduction des coûts} du prototypage \& du développement
+			\item Accès ponctuel à des outils exceptionnels pour \alert{prototyper}
 			\item Rencontre avec d'autres entreprises, d'\alert{autres compétences}
+			\item Favorise les interactions entre recherche et entreprise dans un cadre plus informel
 			\item \alert{Formation continue} des équipes
 		\end{itemize}
 	\end{frame}
@@ -156,12 +157,12 @@
 	\begin{frame}
 		\frametitle{Les partenaires -- Les Lieux}
 
-		\begin{description}
-			\item[Créalab] $\Rightarrow$ Petit usinage, conception, usinage propre
-			\item[Les Subsistances] $\Rightarrow$ Usinage grand volume, métallerie
-			\item[La Ruche Numérique] $\Rightarrow$ Accueil des start-uppers
-			\item[HAUM] $\Rightarrow$ Accueil des particuliers
-		\end{description}
+		\begin{itemize}
+			\item \alert{Créalab} Petit usinage, conception, usinage propre
+			\item \alert{Les Subsistances} Usinage grand volume, métallerie
+			\item \alert{La Ruche Numérique} Accompagnement des start-uppers
+			\item \alert{HAUM} Accompagnement des particuliers
+		\end{itemize}
 
 		\pause
 
@@ -200,7 +201,7 @@
 		\frametitle{Todo List}
 		\begin{itemize}
 			\item Définir les termes des partenariats
-			\item Discuter des conditions d'accès aux lieux
+			\item Discuter des conditions d'accès aux différents lieux
 			\item Informer les réseaux d'entreprises
 			\item Choisir une cible et les équipements associés
 		\end{itemize}
