Rework WP quote on a comment of @seb_vallee

--- a/pres_edu_16112015/pres_edu_16112015.tex
+++ b/pres_edu_16112015/pres_edu_16112015.tex
@@ -57,14 +57,13 @@
 	\section{Qu'est ce qu'un fablab ?}
 	\begin{frame}
 		\frametitle{Fablab : Définition}
-		\begin{quotation}
-			Un fab lab (contraction de l'anglais fabrication laboratory, « laboratoire de fabrication ») est un lieu ouvert au
-			public où il est mis à sa disposition toutes sortes d'outils, notamment des machines-outils pilotées par
-			ordinateur, pour la conception et la réalisation d'objets.\\
+		\begin{quote}
+			Un fab lab (contraction de l'anglais fabrication laboratory, «\,laboratoire de fabrication\,») est un lieu ouvert au
+			public où il est mis à sa disposition toutes sortes d'outils pour la conception et la réalisation d'objets.\\
 			\begin{flushright}
 			--- \textbf{Wikipedia}
 			\end{flushright}
-		\end{quotation}
+		\end{quote}
 		\pause
 
 		\begin{center}
