Last minute corrections

--- a/pres_edu_16112015/pres_edu_16112015.tex
+++ b/pres_edu_16112015/pres_edu_16112015.tex
@@ -72,22 +72,6 @@
 	\end{frame}
 
 	\begin{frame}
-		\frametitle{Fablab : le nécessaire}
-
-		Petite recette pour un fablab semi-public :
-
-		\pause
-
-		\begin{itemize}[<+->]
-			\item Un \alert{lieu}
-			\item Des \alert{équipements}
-			\item Un/Des animateur(s)
-			\item Des opérations, des objets de \alert{communication}
-			\item Un \alert{contexte} économique et éducatif \alert{favorable}
-		\end{itemize}
-	\end{frame}
-
-	\begin{frame}
 		\frametitle{Une orientation économique}
 
 		Possibilité d'amener le lieu vers les entreprises :
@@ -137,6 +121,22 @@
 	\section{Etat du projet au Mans}
 
 	\begin{frame}
+		\frametitle{Fablab : le nécessaire}
+
+		Petite recette pour un fablab semi-public :
+
+		\pause
+
+		\begin{itemize}[<+->]
+			\item Un \alert{lieu}
+			\item Des \alert{équipements}
+			\item Un/Des animateur(s)
+			\item Des opérations, des objets de \alert{communication}
+			\item Un \alert{contexte} économique et éducatif \alert{favorable}
+		\end{itemize}
+	\end{frame}
+
+	\begin{frame}
 		\frametitle{Une autre approche : le fablab distribué}
 
 		\begin{center}
@@ -148,7 +148,7 @@
 			\item Réduction des coûts
 			\item Inclusion dans un \alert{écosystème plus global}
 			\item Mise en place de \alert{partenariats}
-			\item \alert{Échanges d'idées}, de savoir faire
+			\item \alert{Échanges d'idées}, de savoir-faire
 			\item Création d'une \alert{offre cohérente} sur Le Mans
 		\end{itemize}
 	\end{frame}
@@ -200,6 +200,7 @@
 		\frametitle{Todo List}
 		\begin{itemize}
 			\item Définir les termes des partenariats
+			\item Définition du modèle économique
 			\item Discuter des conditions d'accès aux différents lieux
 			\item Informer les réseaux d'entreprises
 			\item Choisir une cible et les équipements associés
