Last minute fixes

--- a/pres_edu_16112015/pres_edu_16112015.tex
+++ b/pres_edu_16112015/pres_edu_16112015.tex
@@ -1,5 +1,9 @@
 \documentclass[10pt, compress]{beamer}
 
+% \documentclass[10pt, compress, handout]{beamer}
+% \usepackage{pgfpages}
+% \pgfpagesuselayout{4 on 1}[a4paper,landscape, border shrink=5mm]
+
 	\usetheme[usetitleprogressbar]{m}
 
 
@@ -187,7 +191,7 @@
 
 		\begin{itemize}
 			\item \textbf{Nov. 2012} Début du projet --- Création du \alert{HAUM}
-			\item \textbf{Mars 2013} Achat d'une \textbf{imprimante 3D} par la Ruche Numérique
+			\item \textbf{Mars 2013} Achat d'une \alert{imprimante 3D} par la Ruche Numérique
 			\item \textbf{Mai~ 2014} Mise à disposition à la Ruche d'\alert{une salle} pour le HAUM
 			\item \textbf{Juin 2014} Création d'une \alert{mission} au sein de la \alert{CCI} pour réfléchir à la création d'un fablab
 			\item \textbf{Sep. 2015} Renouveau du projet --- contacts avec \alert{Créalab} \& des entrepeneurs
